fix alignment

--- a/app/assets/stylesheets/tylium/modules/_sidebar.scss
+++ b/app/assets/stylesheets/tylium/modules/_sidebar.scss
@@ -150,7 +150,7 @@
       img {
         position: absolute;
         top: 5px;
-        left: 5px;
+        left: 4px;
         height: 25px;
         width: auto;
       }
